update project settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-.bloop
-.bsp
-.metals
-.vscode
-project
-target
+.ammonite/
+.bloop/
+.bsp/
+.dotty-ide*
+.idea/
+.metals/
+.scala/
+.vscode/
+*.worksheet.sc
+metals.sbt
+target/
+.DS_Store
